--- a/components/Todo/Todo.module.css
+++ b/components/Todo/Todo.module.css
@@ -10,6 +10,28 @@
     /*height: 52px;*/
 }
 
+.todo:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.text {
+    position: relative;
+    padding: 0 5px;
+    display: inline;
+}
+
+.line{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    height: 2px;
+    background-color: var(--white);
+    opacity: 0.7;
+    border-radius: 3px;
+    padding: 0;
+    margin:0;
+}
+
 .delete {
     width: 22px;
     height: 22px;
