--- a/components/TodoForm/TodoForm.module.css
+++ b/components/TodoForm/TodoForm.module.css
@@ -14,6 +14,7 @@
     height: 50px;
 
     align-items: center;
+    position: relative;
 }
 
 .done,
@@ -24,6 +25,10 @@
     fill: var(--white);
     transition: all 0.3s ease;
     cursor: pointer;
+}
+
+.button {
+    background-color: rgba(0,0,0,0);
 }
 
 .done:hover,
@@ -53,4 +58,14 @@
     object-fit: cover;
     width: 21px;
     height: 21px;
+}
+
+.error {
+    position: absolute;
+    top: 42px;
+    left: 30px;
+    color: red;
+    font-size: 12px;
+    font-weight: bold;
+    font-family: var(--font-family);
 }
