--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,5 +1,5 @@
 .todos {
-    max-width: 500px;
+    max-width: 400px;
     margin: 0 auto;
 
     display: grid;
@@ -15,4 +15,8 @@
     display: grid;
     grid-template-columns: 1fr;
     overflow: hidden;
+}
+
+.wrapper {
+    padding: 10px 10px 0 10px;
 }
