--- a/components/Todo/Todo.module.css
+++ b/components/Todo/Todo.module.css
@@ -1,6 +1,6 @@
 .todo{
     display: grid;
-    grid-template-columns: 30px 1fr 30px;
+    grid-template-columns: 18px 1fr 21px;
     align-items: center;
 
     background-color: #3e3e3e;
@@ -15,6 +15,7 @@
     padding: 0 5px;
     display: inline;
     margin-right: auto;
+    margin-left: 5px;
 }
 
 .line{
@@ -31,17 +32,4 @@
 
 .text {
     white-space: nowrap;
-}
-
-.delete {
-    width: 22px;
-    height: 22px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    opacity: 0.7;
-}
-
-.delete:hover,
-.delete:active {
-    opacity: 1;
 }
