--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -7,7 +7,7 @@
 .button {
     width: 21px;
     height: 21px;
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
     opacity: 0.7;
     transition: all 0.3s ease;
     cursor: pointer;
