--- a/components/Todo/Todo.module.css
+++ b/components/Todo/Todo.module.css
@@ -8,6 +8,8 @@
     padding: 15px 20px;
     color: var(--white);
     margin-bottom: 20px;
+
+    transition: transform 0.2s linear;
 }
 
 .textWrapper {
